--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,20 @@ html {
 
 .container {
   max-width: 1210px;
-  margin: 2rem auto;
+  margin: 2rem;
   position: relative;
+}
+
+.left {
+  float: left;
+  width: 40%;
+  display: inline;
+}
+
+.right {
+  float: right;
+  width: 40% auto;
+  display: inline;
 }
 
 /******************************************
@@ -87,4 +99,20 @@ h1 {
   font-weight: 800;
   letter-spacing: .2rem;
   color: #4C5664;
+}
+h2 {
+  font-size: 2rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #4C5664;
+}
+
+/******************************************
+/* IMAGES
+/*******************************************/
+
+.badger {
+  max-width: 100%;
+  padding: 1.5rem 0;
 }
