--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*
-Project Name: badger_learning
+Project Name: RB-UXD-CODE-LIBRARY
 Client: Ourselves!
 Author: Clementine Brown, Jun Taoka, Sasha Ward, Karima Saad
 */
@@ -37,7 +37,9 @@ img {
   max-width: 100%;
 }
 html {
-  font-size: 16px;
+  font-size: .8rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
   color: #4C5664;
 }
 
@@ -75,8 +77,41 @@ html {
 /******************************************
 /* TYPOGRAPHY
 /*******************************************/
-
-
+p {
+  font-size: .8rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+h1 {
+  font-size: 4rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  letter-spacing: .2rem;
+  color: #4C5664;
+}
 /******************************************
 /* IMAGES
 /*******************************************/
+
+/******************************************
+/* BUTTONS
+/*******************************************/
+
+.btn {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  font-family: Arial;
+  color: #f8f8f8;
+  font-size: 20px;
+  background: #22D69B;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  max-width: 200px;
+  text-align: center;
+}
+
+.btn:hover {
+  background: #1ba678;
+  text-decoration: none;
+}
