--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ html {
 
 .container {
   max-width: 1210px;
-  padding-top: 2rem;
+  padding: 2rem 0 2rem 0;
   margin: 0 auto 0 auto;
   background-color: #f8f8f8;
   box-shadow: 0 0 1px 1px rgba(0,0,0,0.05);
