--- a/css/accordion.css
+++ b/css/accordion.css
@@ -54,3 +54,25 @@
   background-color: #97f3d5;
   padding: 0.5rem 1.2rem;
 }
+
+.expand {
+  display: inline-block;
+  float: right;
+}
+
+.expand:hover {
+  cursor: pointer;
+}
+
+.rotate{
+  -moz-transition: all .2s linear;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+
+.rotate.down{
+  -ms-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -webkit-transform:rotate(180deg);
+  transform:rotate(180deg);
+}
