--- a/css/accordion.css
+++ b/css/accordion.css
@@ -71,6 +71,13 @@ html {
   padding: 0.5rem 1.2rem;
 }
 
+.acc input:checked ~ label .rotate {
+  -ms-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -webkit-transform:rotate(180deg);
+  transform:rotate(180deg);
+}
+
 .expand {
   display: inline-block;
   float: right;
@@ -84,11 +91,4 @@ html {
   -moz-transition: all .2s linear;
   -webkit-transition: all .2s linear;
   transition: all .2s linear;
-}
-
-.rotate.down{
-  -ms-transform:rotate(180deg);
-  -moz-transform:rotate(180deg);
-  -webkit-transform:rotate(180deg);
-  transform:rotate(180deg);
 }
